Phil's modifications to protostar.f90 as well as addition of data from Ezer & Cameron 1967

--- a/development/makefile
+++ b/development/makefile
@@ -1,6 +1,6 @@
 #
 #F90 = g95
-F90 = gfortran
+F90 = gfortran -g 
 #F90 = ifort
 
 #newton: test_newton.o root_find.o protostellar_core.o constants.o
